# GCC125-TF-Wiki

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: dev.yml  docker-publish.yml  python-package.yml
src/wiki/: app.py  config.py  container.py  interfaces.py
src/wiki/models/: wiki_page.py
src/wiki/repositories/: wiki_repository.py
src/wiki/routes/: wiki_routes.py
src/wiki/services/: markdown_service.py  pdf_document_service.py  pdf_renderer.py  pdf_service.py  wiki_service.py
src/wiki/static/css/: app.css  markdown.css  pygments.css
src/wiki/static/js/: app.js
src/wiki/templates/: base.html  index.html  page.html
src/wiki/templates/components/: navbar.html  sidebar.html
tests/: conftest.py  test_config.py  test_models_repos.py  test_routes.py  test_services.py
